# dodo

./: Cargo.toml  README.md
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
migrations/: 20240704065001_create_users_table.up.sql  20240704065036_create_transactions_table.down.sql  20240704065036_create_transactions_table.up.sql
src/: main.rs  store.rs
src/routes/: authentication.rs  user.rs
src/types/: amount.rs  mod.rs  transaction.rs  user.rs
