[package]
name = "dodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
handle-errors = { path = "handle-errors", version = "0.1.0" }
log = "0.4"
env_logger = "0.11.3"
log4rs = "1.0"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.3.2"
reqwest-retry = "0.6.0"
rand = "0.8"
rust-argon2 = "2.1"
paseto = "2.0"
chrono = "0.4.19"